--- a/css/_settings.scss
+++ b/css/_settings.scss
@@ -14,12 +14,12 @@ $post-title-color:       #303030;
 $post-date-color:        #9a9a9a;
 
 
-$body-color:            #515151;
-$body-background-color: #fff;
+$body-color:            #FF8C00;
+$body-background-color: #FFFACD;
 
-$link-color:            #268bd2;
+$link-color:            #B8860B;
 
-$headings-color:        #313131;    // h1,h2,h3,h4,h5,h6
+$headings-color:        #FFA500;    // h1,h2,h3,h4,h5,h6
 
 $strong-color:          #303030;    // strong
 
